[package]
name = "iroh-ping"
version = "0.7.0"
edition = "2024"
description = "high level PING-PONG iroh protocol"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ping"
keywords = ["iroh", "protocol"]
rust-version = "1.89"

[dependencies]
anyhow = "1.0.98"
iroh = "0.96"
iroh-metrics = "0.38.0"
n0-error = "0.1.3"

[dev-dependencies]
iroh-tickets = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
