[package]
name = "iroh-ping"
version = "0.10.0"
edition = "2024"
description = "high level PING-PONG iroh protocol"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ping"
keywords = ["iroh", "protocol"]
rust-version = "1.91"

[dependencies]
anyhow = "1.0"
iroh = "=1.0.0-rc.0"
iroh-metrics = "=1.0.0-rc.0"
n0-error = "=1.0.0-rc.0"

[dev-dependencies]
iroh-services = "0.14"
iroh-tickets = "=1.0.0-rc.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[patch.crates-io]
iroh-services = { git = "https://github.com/n0-computer/iroh-services", branch = "update-1-0-rc-0" }
